# MCU_Builder

./: README.md  ti_cc26xx_sdk.cmake  util.cmake
cmake/: ti_cc26xx_sdk.cmake
example/: CMakeLists.txt
ld/: air_105.ld  asr6601se_gcc.ld  cc13x2x7_cc26x2x7_freertos.lds  chf2xx.ld
ld/riscv/: ch32v2xx.ld  ch32x05.ld
toolchain/: toolchain-arm.cmake  toolchain.cmake  toolchain_riscv.cmake
